--- a/src/app/modules/client/clientfoydalanuvchi/client-foydalanuvchi-list/client-foydalanuvchi-list.component.css
+++ b/src/app/modules/client/clientfoydalanuvchi/client-foydalanuvchi-list/client-foydalanuvchi-list.component.css
@@ -157,7 +157,7 @@ width: 35px;
 
 .KirishQismidagiuchRasm{
     float: left;
-    width: 32.7%;
+    width: 30.7%;
     padding: 5px;
 }
 
@@ -166,7 +166,7 @@ width: 35px;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center center;
-    width: 32%;
+    width: 30%;
     height: 50vh;
     border-radius: 22px;
     margin: 5px;
@@ -292,4 +292,7 @@ width: 35px;
 }
 .tashrifBuyurmoqbuttoni:hover{
     background-color: #ffd700;
+}
+.xizmathaqidaMalumotlar{
+  margin-top: 777px;
 }
