--- a/src/app/modules/client/xizmatlar/bitta-xizmat-bolimi/bitta-xizmat-bolimi.component.html
+++ b/src/app/modules/client/xizmatlar/bitta-xizmat-bolimi/bitta-xizmat-bolimi.component.html
@@ -1,7 +1,5 @@
 <div class="xizmat">
-    <img src={{xizmat.photo}}/>
-    <h3>{{xizmat.xizmatNomi}}</h3>
-    <p class="translation">{{xizmat.translation}}</p>
-    <p class="example">{{xizmat.example}}</p>
+    <img src={{xizmat.rasm}}/>
+    <h3>{{xizmat.nomi}}</h3>
   </div>
 
