--- a/src/app/modules/client/xizmatlar/xizmatlar-list/xizmatlar-list.component.css
+++ b/src/app/modules/client/xizmatlar/xizmatlar-list/xizmatlar-list.component.css
@@ -157,7 +157,7 @@ width: 35px;
 
 .KirishQismidagiuchRasm{
     float: left;
-    width: 32.7%;
+    width: 32%;
     padding: 5px;
 }
 
@@ -166,7 +166,7 @@ width: 35px;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center center;
-    width: 32%;
+    width: 31%;
     height: 50vh;
     border-radius: 22px;
     margin: 5px;
@@ -177,7 +177,7 @@ width: 35px;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center center;
-    width: 32%;
+    width: 31%;
     height: 50vh;
     border-radius: 22px;
     margin: 5px;
@@ -189,7 +189,7 @@ width: 35px;
     /* background-size: 300px 200px; */
     background-size: 100% 100%;
     background-position: center center;
-    width: 32%;
+    width: 31%;
     height: 50vh;
     margin: 5px;
     
@@ -324,4 +324,7 @@ width: 35px;
   @media (max-width:800px) {
       grid-template-columns: repeat(2,1fr);
   }
+}
+.xizmathaqidaMalumotlar{
+  margin-top: 700px;
 }
