--- a/src/app/modules/umumiy/forget-password/forget-password.component.css
+++ b/src/app/modules/umumiy/forget-password/forget-password.component.css
@@ -1,24 +1,9 @@
+[nz-form] {
+    width: 300px;
 
-      .login-form {
-        max-width: 300px;
-        width: 300px;
-      }
+  }
 
-      .login-form-margin {
-        margin-bottom: 16px;
-      }
-
-      .login-form-forgot {
-        float: right;
-      }
-
-      .login-form-button {
-        width: 100%;
-        border-radius: 22px;
-      }
-
-.PE{
-    
+.NM{
     margin: 0;
     padding: 0;
     background-image: url(../../../../assets/find-the-right-keyword-strategy-scaled-1-1-ZGX.png);
