ma'lumotlar bazadan olindi

--- a/src/app/modules/client/xizmatlar/bitta-xizmat-bolimi/bitta-xizmat-bolimi.component.html
+++ b/src/app/modules/client/xizmatlar/bitta-xizmat-bolimi/bitta-xizmat-bolimi.component.html
@@ -1,5 +1,5 @@
 <div class="xizmat">
-    <img src={{xizmat.rasm}}/>
+    <img src="https://localhost:7257/{{xizmat.rasm}}"/>
     <h3>{{xizmat.nomi}}</h3>
   </div>
 
