--- a/src/app/modules/umumiy/forget-password/forget-password.component.html
+++ b/src/app/modules/umumiy/forget-password/forget-password.component.html
@@ -17,7 +17,7 @@
           <nz-form-item>
             <nz-form-control nzErrorTip="Please input your name">
               <nz-input-group nzPrefixIcon="phone">
-                <input type="text"  nz-input formControlName="userName" placeholder="phone number" />
+                <input type="text"  nz-input formControlName="phoneNumber" placeholder="phone number" />
               </nz-input-group>
             </nz-form-control>
           </nz-form-item>
@@ -29,7 +29,7 @@
           </nz-form-control>
         </nz-form-item>
        
-        <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" routerLink="/tekshiruv">Check</button>
+        <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" routerLink="/tekshiruv" (click)="updatePassword()">Check</button>
         
       </form>
     </div>
