--- a/src/app/modules/client/clientfoydalanuvchi/bitta-shaxar/bitta-shaxar.component.html
+++ b/src/app/modules/client/clientfoydalanuvchi/bitta-shaxar/bitta-shaxar.component.html
@@ -1,5 +1,5 @@
 <div class="shahar">
-    <img src={{shahar.rasm}}/>
+    <img src="https://localhost:7257/{{shahar.rasm}}"/>
     <h3>{{shahar.nomi}}</h3>
   </div>
 
