--- a/src/app/modules/umumiy/nazorat/nazorat.component.html
+++ b/src/app/modules/umumiy/nazorat/nazorat.component.html
@@ -1,8 +1,8 @@
 <div class="PE">
 <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
     <nz-form-item>
-      <nz-form-control nzErrorTip="Please input your username!">
-        <nz-input-group nzPrefixIcon="user">
+      <nz-form-control nzErrorTip="Please input your email!">
+        <nz-input-group nzPrefixIcon="mail">
           <input type="text"  nz-input formControlName="userName" placeholder="Username" />
         </nz-input-group>
       </nz-form-control>
